Modified css to populate only one background img, which fills the whole background. Mobile first. Parks still populate behind the homepage data, because it has not yet been transitioned to a fixed header.

--- a/assets/style.css
+++ b/assets/style.css
@@ -4,13 +4,17 @@ html {
 	height: 100%;
 	background: rgba(228, 228, 228, 1);
 	font-family: "Josefin Sans", sans-serif;
-	background-image: url("badlands.jpg");
+	background-image: url("badlands.jpeg");
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
 }
 
+h1 {
+	color: black;
+	text-shadow: 0px 0px 10px white;
 
+}
 
 .title {
 	justify-content: center;
